tests/baselines/reference/collisionCodeGenModuleWithConstructorChildren.errors.txt
collisionCodeGenModuleWithConstructorChildren.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithConstructorChildren.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithConstructorChildren.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionCodeGenModuleWithConstructorChildren.ts (3 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = 3;
        class c {
            constructor(M, p = x) {
            }
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class d {
            constructor(private M, p = x) {
            }
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class d2 {
            constructor() {
                var M = 10;
                var p = x;
            }
        }
    }